# Auto-PPT

./: .gitignore  LICENSE  PROJECT_FILES.md  QUICKSTART.md  README.md  ai_html_to_ppt.py  example_new_slide_type.py  example_new_slide_types.html  example_new_slide_types.pptx  example_new_slide_types_data.json  main.py  pptx_template_creator.py  pyproject.toml  quick_example.py  slide_generator.py  slide_types.py  test_logger.py  test_refactored.py  探索日本北陸的自然奇觀與文化精粹.pptx  探索日本北陸的自然奇觀與文化精粹_data.json  探索日本北陸的自然奇觀與文化精粹_presentation.html  黑部立山雪壁與粉紅芝櫻，探索文化古蹟與美食_data.json  黑部立山雪壁與粉紅芝櫻，探索文化古蹟與美食_presentation.html
AutoPPT/: __init__.py  auto_ppt.py  convert_html_to_pptx.py  example_new_slide_type.py  slide_generator.py  slide_types.py  template_engine.py  test_refactored.py
AutoPPT/scrapy/: __init__.py  base_scrapy.py  playwright.py
AutoPPT/slide_types/: __init__.py  _base.py  slide_registry.py  (+1 more)
cursor_agent_md/: AUTO_PPT_CLASS.md  BULLET_ARROW_FIX.md  BULLET_CONTENT_FIX_SUMMARY.md  DESCRIPTION_EXTRACTION_UPDATE.md  EXTENSIBILITY_GUIDE.md  IMAGE_TEXT_ALIGNMENT.md  IMAGE_TEXT_FIX_SUMMARY.md  JSON_SCHEMA_EXTRACTION_SUMMARY.md  LAYOUT_FIX_SUMMARY.md  LOGGER_USAGE.md  NEWLINE_CENTER_FIX.md  NEW_ARCHITECTURE_SUMMARY.md  PPTX_TEMPLATE_CREATOR_GUIDE.md  PPTX_TEMPLATE_USAGE.md  QUICKSTART_NEW_ARCHITECTURE.md  README_ARCHITECTURE.md  REFACTOR_SUMMARY.md  SAVE_PPTX_UPDATE.md  USAGE.md  USAGE_EXAMPLES.md
old_py/: old_ai_html_to_ppt.py  old_convert_html_to_pptx.py
pptx_template/: test_analysis.json
templates/: default_template.json  my_custom_template.json  test_template.json
(+2 files in other folders)
