[project]
name = "notebooklm-john"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "google-auth>=2.40.3",
    "google-genai>=1.33.0",
    "lxml>=6.0.1",
    "pillow>=11.3.0",
    "python-pptx>=1.0.2",
]
